# sonic-buildimage

./: .gitmodules  build_debian.sh
device/mellanox/x86_64-mlnx_msn2700-r0/: sensors.conf
device/mellanox/x86_64-mlnx_msn2700-r0/plugins/: sfputil.py
device/mellanox/x86_64-mlnx_msn4600c-r0/: sensors.conf
dockers/docker-platform-monitor/: Dockerfile.j2
dockers/docker-platform-monitor/ssd_tools/: iSMART_64
files/build_templates/: init_cfg.json.j2
platform/mellanox/: docker-syncd-mlnx.mk  hw-management.mk  mlnx-fw-dump-me.mk  rules.mk
platform/mellanox/docker-syncd-mlnx/: Dockerfile.j2  supervisord.conf
platform/mellanox/hw-management/: 0003-Make-hw-mgmt-SimX-compatiable.patch
platform/mellanox/mlnx-fw-dump-me/: Makefile
platform/mellanox/mlnx-fw-dump-me/fw-dump-me/: CMakeLists.txt
platform/mellanox/mlnx-fw-dump-me/fw-dump-me/debian/: changelog  control  mlnx-fw-dump-me.install
platform/mellanox/mlnx-fw-dump-me/fw-dump-me/src/: fwdumpcli.cpp  fwdumpdmain.cpp  sdk_fd_wrap.cpp  sdk_fd_wrap.h  usock.cpp  usock.h
platform/mellanox/mlnx-platform-api/sonic_platform/: chassis.py  psu.py
rules/: docker-platform-monitor.mk  ethtool.mk
src/dhcpmon/src/: dhcp_device.c  dhcp_device.h  dhcp_mon.c
src/ethtool/: Makefile
src/sonic-host-services/scripts/: hostcfgd
src/sonic-host-services/tests/hostcfgd/: hostcfgd_test.py  test_vectors.py
